--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.10.1",
+    "@types/bcrypt": "^5.0.0",
     "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
